New: Rules= in vminecraft.properties Changed: Comments to be better, Rules now uses vminecraft.properties, global messages on commands should no longer go off when the command doesn't do anything, Removed:onKick, onIpBan, onBan they weren't even used.

--- a/TODO
+++ b/TODO
@@ -1,12 +1,11 @@
 TODO:
-Improve logging
 Fix existing bugs in /promote and /demote
 Add toggles to all features
-If vminecraft.properties doesn't exist make it be written
-Makes /rules use a txt file
-Refine messages when admins use commands
-/whois doesn't update when someone's group is changed
-Improve my comments on vminecraft.java
+If vminecraft.properties doesn't exist make it be written and include default settings
+Refine messages when admins use commands --Ready for testing
+Change loading to happen when the plugin loads instead of having to wait for a player to speak
+Change everything else in settings to be a string like rules instead of booleans
 
 Ideas:
 Mass teleport command
+A personal muting system for players
