--- a/TODO
+++ b/TODO
@@ -1,25 +1,40 @@
-Vminecraft b8 Todo
-Antigriefs
-/a to toggle admin chat
-personal muting
-vminecraft version of help that summarizes the mod
-Time manipulation
-Aliasing Commands (Global Aliases and Personal Aliases)
-Recode /msg and add a /reply (/r) feature
-Quick recode of /me to use the new getName function
-
-Overload /modify(?) --We talked about potentially doing this and I think I would like to now to add in further functionality
-
-Slap
-Toggle for the GG exploit fix
+Vminecraft b8 Todo:
+	+ Antigriefs
+	+ /a to toggle admin chat
+	+ vminecraft Help
+		* Specialized help message for vminecraft
+			? /vhelp?
+	+ Time manipulation <Cere> Working on this
+		* Have time changes not be instant but move the sky faster
+			to get to the time entered
+		* Loop through specific times of the day and then rewind
+			ex: Sunrise to sunset, mid-morning to noon
+	+ Aliasing Commands (Global Aliases and Personal Aliases) <Cere>
+	+ Recode Messaging
+		* Reply Feature
+		* Personal Muting
+	+ Quick recode of /me to use the new getName function
+	+ Different types of /slay
+		* /slay fire to burn them to death
+		* /slay drown to drown them
+		* /slay boil to burn them with lava
+	? Overload /modify
+		<Cere> We talked about potentially doing this and I think
+		I would like to now to add in further functionality and
+		further limit what features of /modify groups can access
 
 DONE
-Code was organized
-Aliasing was added
-Playerlist is now colorful and awesome
-Random death messages
-Suicide command
-Heal Command
-Colored Prefixes
-Emotes such as ^^ ^_^ now possible
-Multi Line color fix, now we can have color on multiple lines without crashing the client
+	+ Code was organized
+	+ Aliasing was added
+	+ Playerlist is now colorful and awesome
+	+ Random death messages
+	+ Suicide command
+	+ Heal Command
+	+ Colored Prefixes
+	+ Color Codes only removed when actual colors are specified
+		* Allows use of ^ for emotes and whatever else they
+			might be needed for.
+	+ Multi Line color fix
+		* Now we can have color on multiple lines without
+			crashing the client
+		* Also does not cut words in half
