Even more up to date :3

--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 Vminecraft b8 Todo:
 	+ Antigriefs
+	+ Allow players to nickname themselves or others
 	+ /a to toggle admin chat
 	+ vminecraft Help
 		* Specialized help message for vminecraft
