--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 Vminecraft b8 Todo:
-	+ Antigriefs <Nos> Working on this, waiting for hMod to fix player 			health
+	+ ^r for rainbow color code
+	+ Finish work on the flat file system
+	+ Antigriefs <Nos> Working on this, waiting for hMod to fix player health
 	+ Allow players to nickname themselves or others
 	+ vminecraft Help
 		* Specialized help message for vminecraft
@@ -40,3 +42,5 @@ DONE
 		* Now we can have color on multiple lines without
 			crashing the client
 		* Also does not cut words in half
+
+Notes: Let's try to to finish as much of this list as possible tomorrow and push for a b8 release soon :P
