--- a/TODO
+++ b/TODO
@@ -1,11 +1,47 @@
-TODO:
-Fix existing bugs in /promote and /demote
-Add toggles to all features
-If vminecraft.properties doesn't exist make it be written and include default settings
-Refine messages when admins use commands --Ready for testing
-Change loading to happen when the plugin loads instead of having to wait for a player to speak
-Change everything else in settings to be a string like rules instead of booleans
+Vminecraft b8 Todo:
+	+ ^r for rainbow color code
+	+ Finish work on the flat file system
+	+ Antigriefs <Nos> Working on this, waiting for hMod to fix player health
+	+ Allow players to nickname themselves or others
+	+ vminecraft Help
+		* Specialized help message for vminecraft
+			? /vhelp?
+	+ Time manipulation <Cere> Working on this
+		* Have time changes not be instant but move the sky faster
+			to get to the time entered
+		* Loop through specific times of the day and then rewind
+			ex: Sunrise to sunset, mid-morning to noon
+	+ Aliasing Commands (Global Aliases and Personal Aliases) <Cere>
+	+ Recode Messaging
+		* Reply Feature
+		* Personal Muting
+	+ Different types of /slay
+		* /slay fire to burn them to death
+		* /slay drown to drown them
+		* /slay boil to burn them with lava
+	? Overload /modify
+		<Cere> We talked about potentially doing this and I think
+		I would like to now to add in further functionality and
+		further limit what features of /modify groups can access
+		<Nos> We should definitely add suffixes to /modify at least
 
-Ideas:
-Mass teleport command
-A personal muting system for players
+DONE
+        + Fixed death messages and ezModo
+	+ Quick recode of /me to use the new getName function
+	+ /a to toggle admin chat
+	+ Code was organized
+	+ Aliasing was added
+	+ Playerlist is now colorful and awesome
+	+ Random death messages
+	+ Suicide command
+	+ Heal Command
+	+ Colored Prefixes
+	+ Color Codes only removed when actual colors are specified
+		* Allows use of ^ for emotes and whatever else they
+			might be needed for.
+	+ Multi Line color fix
+		* Now we can have color on multiple lines without
+			crashing the client
+		* Also does not cut words in half
+
+Notes: Let's try to to finish as much of this list as possible tomorrow and push for a b8 release soon :P
