Added removeNick, removeSuffix, and removePrefix to remove each respective feature

--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 Vminecraft b8 Todo:
 	+ Finish work on the flat file system
 	+ Antigriefs <Nos> Working on this
-	+ Time manipulation <Cere> Working on this
+	? Time manipulation <Cere> Working on this
 		* Have time changes not be instant but move the sky faster
 			to get to the time entered
 		* Loop through specific times of the day and then rewind
