--- a/TODO
+++ b/TODO
@@ -1,6 +1,5 @@
 vMinecraft v1 Todo:
 	! Promote and Demote (ASAP) <Cere> DIBS
-	+ Antigriefs <Nos> Working on this
 	+ matchPlayer taking into account nicknames
 	+ Modify setNick to not allow players to copy other's
 	  nicknames and account names. Also disallow Notch as a nick :P
@@ -9,6 +8,8 @@ vMinecraft v1 Todo:
 	+ Write a way to add and remove commands from players and groups
 		
 vMinecraft v2 Updates!
+    +Add in a sort of rap sheet file for storing and retrieving information on bans and kicks.
++ More Complex Antigriefs <Nos> Working on this... that is in the future!
 	+ Different types of /slay
 		* /slay fire to burn them to death
 		* /slay drown to drown them
