--- a/TODO
+++ b/TODO
@@ -1,9 +1,14 @@
 vMinecraft v1 Todo:
+        + Brackets with group prefix colors in chat
+        + Add permission toggle for using colors
+        + Ability to ban the use of certain colors as default chat/prefix color/suffix color
+        + More complex fire antigrief
 	+ matchPlayer taking into account nicknames and prefixes and suffixes
 	+ Add [] around player tags
 	+ Modify setNick to not allow players to copy other's
+        + Fix ^^ in chat causing error message
 	  nicknames and account names. Also disallow Notch as a nick :P
-    + Fix death messages (again :v)
+    + Make death messages accurately report damage type
 	+ Aliasing Commands (Global Aliases and Personal Aliases) <Cere>
 	+ Write a way to add and remove commands from players and groups
 		
@@ -26,6 +31,7 @@ vMinecraft v2 Updates!
 			how much longer they are probated for.
 
 DONE
+    +Fix death messages
     +Added /freeze command to stop players from moving
 	+ Quick recode of /me to use the new getName function
     + Promote and Demote (ASAP) <Cere> DIBS
