A simple fire antigrief plugin

--- a/TODO
+++ b/TODO
@@ -7,3 +7,4 @@ Bukkit TODO
 	-vGroups for the groups system (Cere)
 -Finish up the hMod planned features
 -Include updatr support with the new plugins
+-Port as many of vMinecrafts features as possible
