--- a/TODO
+++ b/TODO
@@ -14,3 +14,4 @@ High Priority
 Low Priority
 -Fix bug where xmas/rainbow don't continue on the second line
 -Fix bug where ^x & ^r are inserted to the end of the message when using xmas/rainbow
+-Rainbow (Possibly xmas as well) crashing clients when entering the second line. My guess is it is a color code being inserted at the end.
