--- a/mcMMO/Changelog.txt
+++ b/mcMMO/Changelog.txt
@@ -1,5 +1,9 @@
 Changelog:
 #Versions without changelogs probably had very small misc fixes, like tweaks to the source code#
+Version 0.7
+	Completely rewrote the XP system
+	Added an XP skillrate modifier to the settings file
+	
 Version 0.6.2
 	Axes now do critical strikes against farm animals
 	Removed the "Stupidly Long Constructor"
